samples/_failures_safe/1761404281_9ead3a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_579139ec.c: In function ‘main’:
./samples/SAFE/__tmp_579139ec.c:152:5: error: expected declaration or statement at end of input
  152 |     print_word_counts(words, word_count);
      |     ^~~~~~~~~~~~~~~~~
